fixed alignment on two sections
couldn't figure out the margin collapse, will try to refactor at a
later date

--- a/boris/media/less/style.less
+++ b/boris/media/less/style.less
@@ -36,6 +36,10 @@ header {
 	}
 }
 
+#state_form {
+	margin-top: -10px; /* Cannot figure out what is causing the discrepency in height between the two sections.  I assume it's some form of margin collapse.. */
+	
+}
 
 form {
 	padding-bottom: 10px;
